<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xrubio.databindingexample.ui.MainActivity">

    <data>
        <variable
            name="view"
            type="com.xrubio.databindingexample.ui.MainActivity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/pojo_model_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pojo_model_activity_label"
            android:onClick="@{view::onClickPojoModelActivityButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/observable_model_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/observable_model_activity_label"
            android:onClick="@{view::onClickObservableModelActivityButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pojo_model_activity_button"/>

        <Button
            android:id="@+id/observable_field_model_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/observable_field_model_activity_label"
            android:onClick="@{view::onClickObservableFieldModelActivityButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observable_model_activity_button"/>

        <Button
            android:id="@+id/two_way_binding_vanilla_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{view::onClickTwoWayBindingVanillaActivityButton}"
            android:text="@string/two_way_binding_vanilla_activity_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observable_field_model_activity_button"/>

        <Button
            android:id="@+id/two_way_binding_conversion_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="@{view::onClickTwoWayBindingConversionActivityButton}"
            android:text="@string/two_way_binding_conversion_activity_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/two_way_binding_vanilla_activity_button"/>

        <Button
            android:id="@+id/two_way_binding_conversion_converter_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="@{view::onClickTwoWayBindingConversionConverterActivityButton}"
            android:text="@string/two_way_binding_conversion_converter_activity_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/two_way_binding_conversion_activity_button"/>

    </android.support.constraint.ConstraintLayout>

</layout>
